--- a/boards/shields/6x7kb/build.yaml
+++ b/boards/shields/6x7kb/build.yaml
@@ -4,12 +4,12 @@
 # control, add individual board + shield combinations to
 # the `include` property, e.g:
 #
-# board: [ "nice_nano_v2" ]
-# shield: [ "corne_left", "corne_right" ]
+# board: [ "pro_micro" ]
+# shield: [ "67_left", "67_right" ]
 # include:
-#   - board: bdn9_rev2
+#   - board: pro_micro
 #   - board: nice_nano_v2
-#     shield: reviung41
+#     shield: 67
 #
 ---
 include:
