--- a/build.yaml
+++ b/build.yaml
@@ -1,19 +1,21 @@
-# This file generates the GitHub Actions matrix.
-# For simple board + shield combinations, add them to the top level board and
-# shield arrays, for more control, add individual board + shield combinations
-# to the `include` property. You can also use the `cmake-args` property to
-# pass flags to the build command and `artifact-name` to assign a name to
-# distinguish build outputs from each other:
+# This file generates the GitHub Actions matrix
+# For simple board + shield combinations, add them
+# to the top level board and shield arrays, for more
+# control, add individual board + shield combinations to
+# the `include` property, e.g:
 #
-# board: [ "nice_nano_v2" ]
-# shield: [ "corne_left", "corne_right" ]
+# board: [ "pro_micro" ]
+# shield: [ "67_left", "67_right" ]
 # include:
-#   - board: bdn9_rev2
+#   - board: pro_micro
 #   - board: nice_nano_v2
 #     shield: reviung41
-#   - board: nice_nano_v2
-#     shield: corne_left
-#     cmake-args: -DCONFIG_ZMK_USB_LOGGING=y
-#     artifact-name: corne_left_with_logging
 #
 ---
+include:
+  - board: pro_micro
+    shield: 67
+  - board: pro_micro
+    shield: 67_left
+  - board: pro_micro
+    shield: 67_right
