--- a/build.yaml
+++ b/build.yaml
@@ -13,9 +13,9 @@
 #
 ---
 include:
-  - board: pro_micro
+  - board: nice_nano_v2 
     shield: 67
-  - board: pro_micro
+  - board: nice_nano_v2
     shield: 67_left
-  - board: pro_micro
+  - board: nice_nano_v2
     shield: 67_right
